// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListReplies filters 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJtb3JlTGlrZVRoaXMyIl0=",
        "lastCursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
      },
      "totalCount": 2,
    },
  },
}
`;

exports[`ListReplies filters 2`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJ1c2VyRm9vIl0=",
        "lastCursor": "WyJ1c2VyRm9vIl0=",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListReplies filters 3`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "rumor",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJydW1vciJd",
        "lastCursor": "WyJydW1vciJd",
      },
      "totalCount": 1,
    },
  },
}
`;

exports[`ListReplies filters by mixed query 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "totalCount": 2,
    },
  },
}
`;

exports[`ListReplies filters by moreLikeThis and given text, find replies containing hyperlinks with the said text 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "referenceUrl",
          },
        },
      ],
    },
  },
}
`;

exports[`ListReplies filters by moreLikeThis and given text, find replies with the said URL's content 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "node": Object {
            "id": "rumor",
          },
        },
      ],
    },
  },
}
`;

exports[`ListReplies handles selfOnly filter properly if not logged in 1`] = `
Object {
  "data": Object {
    "ListReplies": null,
  },
  "errors": Array [
    [GraphQLError: selfOnly can be set only after log in],
  ],
}
`;

exports[`ListReplies lists all replies 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "cursor": "WyJ1c2VyRm9vIl0=",
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "cursor": "WyJydW1vciJd",
          "node": Object {
            "id": "rumor",
          },
        },
        Object {
          "cursor": "WyJyZWZlcmVuY2VVcmwiXQ==",
          "node": Object {
            "id": "referenceUrl",
          },
        },
        Object {
          "cursor": "WyJtb3JlTGlrZVRoaXMyIl0=",
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "cursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJ1c2VyRm9vIl0=",
        "lastCursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
      },
      "totalCount": 5,
    },
  },
}
`;

exports[`ListReplies sorts 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
        Object {
          "node": Object {
            "id": "rumor",
          },
        },
        Object {
          "node": Object {
            "id": "referenceUrl",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WzQsInVzZXJGb28iXQ==",
        "lastCursor": "WzEsInJlZmVyZW5jZVVybCJd",
      },
      "totalCount": 5,
    },
  },
}
`;

exports[`ListReplies supports after 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "moreLikeThis1",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJ1c2VyRm9vIl0=",
        "lastCursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
      },
      "totalCount": 5,
    },
  },
}
`;

exports[`ListReplies supports before 1`] = `
Object {
  "data": Object {
    "ListReplies": Object {
      "edges": Array [
        Object {
          "node": Object {
            "id": "userFoo",
          },
        },
        Object {
          "node": Object {
            "id": "rumor",
          },
        },
        Object {
          "node": Object {
            "id": "referenceUrl",
          },
        },
        Object {
          "node": Object {
            "id": "moreLikeThis2",
          },
        },
      ],
      "pageInfo": Object {
        "firstCursor": "WyJ1c2VyRm9vIl0=",
        "lastCursor": "WyJtb3JlTGlrZVRoaXMxIl0=",
      },
      "totalCount": 5,
    },
  },
}
`;
